--- a/apps/api/env.example
+++ b/apps/api/env.example
@@ -13,6 +13,11 @@ NODE_ENV="development"
 PORT=3002
 FRONTEND_URL="http://localhost:5173"
 
+# CORS Configuration
+# Productionban: csak a megbízható domain-ek (vesszővel elválasztva)
+# Példa: CORS_ORIGIN=https://hellolocal.com,https://www.hellolocal.com
+CORS_ORIGIN=http://localhost:5173,http://localhost:3000
+
 # Web Push Notifications (Optional)
 # Generate VAPID keys with: npx web-push generate-vapid-keys
 VAPID_PUBLIC_KEY="your-vapid-public-key"
