--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -43,7 +43,11 @@
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.2",
     "speakeasy": "^2.0.0",
-    "web-push": "^3.6.7"
+    "web-push": "^3.6.7",
+    "class-validator": "^0.14.1",
+    "class-transformer": "^0.5.1",
+    "@nestjs/throttler": "^6.1.1",
+    "helmet": "^8.0.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^11.0.14",
@@ -53,6 +57,7 @@
     "@types/passport-jwt": "^4.0.1",
     "@types/qrcode": "^1.5.6",
     "@types/web-push": "^3.6.4",
+    "@types/helmet": "^4.0.0",
     "ts-node": "^10.9.2",
     "tsx": "^4.21.0",
     "typescript": "~5.9.3",
